# accretion

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  accretion.gdextension  accretion.gdextension.uid  icon.svg.import  project.godot  rust_out
.githooks/: commit-msg  prepare-commit-msg  strip-ai-attribution.sh
.github/: pull_request_template.md
assets/: ASSETS.md  README.md
crates/accretion-core/: Cargo.toml
crates/accretion-core/src/: colorimetry.rs  constants.rs  derived.rs  disk.rs  eddington.rs  evolution.rs  kerr.rs  lib.rs
crates/accretion-core/tests/: dynamics.rs  golden.rs  identity.rs  integration.rs
crates/accretion-core/tests/common/: mod.rs
crates/accretion-core/tests/fixtures/: golden.json
crates/godot-ext/: Cargo.toml
crates/godot-ext/src/: lib.rs
resources/: space_environment.tres
scenes/: BhMenuBackdrop.tscn  BhSurvival.tscn  DistantBlackHole.tscn  GodotSmoke.tscn  Main.tscn  PresentationTests.tscn  PrimaryStar.tscn  Ship.tscn  harvestable_debris.tscn
scripts/: app_shell.gd  app_shell.gd.uid  bh_disk_driver.gd  bh_disk_driver.gd.uid  bh_menu_backdrop.gd  bh_menu_backdrop.gd.uid  build_godot_ext.sh  cargo_hold.gd  cargo_hold.gd.uid  chase_camera.gd  chase_camera.gd.uid  check_invariants.sh  check_wiki.sh  collect_feedback.gd  collect_feedback.gd.uid  control_hints.gd  control_hints.gd.uid  debris_field.gd  debris_field.gd.uid  debris_target_bracket.gd  debris_target_bracket.gd.uid  debris_visual.gd  debris_visual.gd.uid  distant_black_hole.gd  distant_black_hole.gd.uid  (+46 more)
(+144 files in other folders)
