[package]
name = "accretion-core"
description = "Pure-Rust accretion-disk physics for the accretion game. Zero Godot dependency."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
